--- a/UIDesigner/Exercise_add_dialog_ui.ui
+++ b/UIDesigner/Exercise_add_dialog_ui.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1280</width>
+    <width>1378</width>
     <height>860</height>
    </rect>
   </property>
@@ -16,16 +16,21 @@
   <widget class="QPushButton" name="exerciseDai_save_bt">
    <property name="geometry">
     <rect>
-     <x>960</x>
+     <x>910</x>
      <y>710</y>
      <width>131</width>
-     <height>51</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>10</pointsize>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {background-color:#4d79ff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;color:white;}</string>
    </property>
    <property name="text">
     <string>Save</string>
@@ -34,16 +39,21 @@
   <widget class="QPushButton" name="exerciseDai_add_bt">
    <property name="geometry">
     <rect>
-     <x>970</x>
-     <y>210</y>
+     <x>910</x>
+     <y>250</y>
      <width>131</width>
-     <height>51</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>10</pointsize>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {background-color:#4d79ff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;color:white;}</string>
    </property>
    <property name="text">
     <string>Add</string>
@@ -52,16 +62,22 @@
   <widget class="QPushButton" name="exerciseDai_back_bt">
    <property name="geometry">
     <rect>
-     <x>1110</x>
-     <y>50</y>
-     <width>81</width>
-     <height>31</height>
+     <x>910</x>
+     <y>90</y>
+     <width>131</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>8</pointsize>
+     <family>Microsoft YaHei Light</family>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {background-color:#ff6666; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;color:white;}</string>
    </property>
    <property name="text">
     <string>back</string>
@@ -72,17 +88,23 @@
     <rect>
      <x>140</x>
      <y>170</y>
-     <width>291</width>
+     <width>521</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
+     <family>MS Gothic</family>
      <pointsize>16</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {color:white;}</string>
+   </property>
    <property name="text">
-    <string>Current choose exercise</string>
+    <string>Your favorite exercise list :</string>
    </property>
   </widget>
   <widget class="QScrollArea" name="exerciseDai_scrollArea">
@@ -121,21 +143,93 @@
   <widget class="QPushButton" name="exerciseDai_delete_bt">
    <property name="geometry">
     <rect>
-     <x>970</x>
-     <y>310</y>
+     <x>910</x>
+     <y>360</y>
      <width>131</width>
-     <height>51</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>10</pointsize>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {background-color:#4d79ff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;color:white;}</string>
    </property>
    <property name="text">
     <string>Delete</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>30</y>
+     <width>541</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>MS Gothic</family>
+     <pointsize>16</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {color:white;}</string>
+   </property>
+   <property name="text">
+    <string>Our recommended exercise for you :</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>-40</x>
+     <y>-50</y>
+     <width>1421</width>
+     <height>961</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {background-color:#1f1f2e;}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>850</x>
+     <y>-50</y>
+     <width>251</width>
+     <height>931</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {background-color : #b3d9ff;}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <zorder>label_3</zorder>
+  <zorder>label</zorder>
+  <zorder>exerciseDai_save_bt</zorder>
+  <zorder>exerciseDai_add_bt</zorder>
+  <zorder>exerciseDai_back_bt</zorder>
+  <zorder>label_2</zorder>
+  <zorder>exerciseDai_scrollArea</zorder>
+  <zorder>exerciseDai_search_cb</zorder>
+  <zorder>exerciseDai_delete_bt</zorder>
+  <zorder>label_4</zorder>
+  <zorder>label</zorder>
  </widget>
  <resources/>
  <connections/>
