--- a/UIDesigner/Food_add_dialog_ui.ui
+++ b/UIDesigner/Food_add_dialog_ui.ui
@@ -16,16 +16,21 @@
   <widget class="QPushButton" name="foodDai_delete_bt">
    <property name="geometry">
     <rect>
-     <x>1000</x>
-     <y>310</y>
+     <x>940</x>
+     <y>400</y>
      <width>131</width>
-     <height>51</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>10</pointsize>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {background-color:#4d79ff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;color:white;}</string>
    </property>
    <property name="text">
     <string>Delete</string>
@@ -35,7 +40,7 @@
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>91</y>
+     <y>110</y>
      <width>611</width>
      <height>41</height>
     </rect>
@@ -45,27 +50,33 @@
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>170</y>
-     <width>291</width>
+     <y>210</y>
+     <width>431</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
+     <family>MS Gothic</family>
      <pointsize>16</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {color:white;}</string>
+   </property>
    <property name="text">
-    <string>Current choose food</string>
+    <string>Your favorite food list :</string>
    </property>
   </widget>
   <widget class="QScrollArea" name="foodDai_scrollArea">
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>230</y>
+     <y>270</y>
      <width>611</width>
-     <height>541</height>
+     <height>501</height>
     </rect>
    </property>
    <property name="widgetResizable">
@@ -77,7 +88,7 @@
       <x>0</x>
       <y>0</y>
       <width>609</width>
-      <height>539</height>
+      <height>499</height>
      </rect>
     </property>
    </widget>
@@ -85,16 +96,21 @@
   <widget class="QPushButton" name="foodDai_save_bt">
    <property name="geometry">
     <rect>
-     <x>990</x>
-     <y>710</y>
+     <x>940</x>
+     <y>690</y>
      <width>131</width>
-     <height>51</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>10</pointsize>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {background-color:#4d79ff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;color:white;}</string>
    </property>
    <property name="text">
     <string>Save</string>
@@ -103,16 +119,21 @@
   <widget class="QPushButton" name="foodDai_add_bt">
    <property name="geometry">
     <rect>
-     <x>1000</x>
-     <y>210</y>
+     <x>940</x>
+     <y>280</y>
      <width>131</width>
-     <height>51</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>10</pointsize>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {background-color:#4d79ff; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;color:white;}</string>
    </property>
    <property name="text">
     <string>Add</string>
@@ -121,21 +142,93 @@
   <widget class="QPushButton" name="foodDai_back_bt">
    <property name="geometry">
     <rect>
-     <x>1140</x>
-     <y>50</y>
-     <width>81</width>
-     <height>31</height>
+     <x>940</x>
+     <y>100</y>
+     <width>121</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>8</pointsize>
+     <family>Microsoft YaHei Light</family>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {background-color:#ff6666; border-style: outset; border-width: 2px; border-radius: 20px; border-color: beige;color:white;}</string>
    </property>
    <property name="text">
     <string>back</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>880</x>
+     <y>-40</y>
+     <width>251</width>
+     <height>931</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {background-color : #b3d9ff;}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>-110</x>
+     <y>-40</y>
+     <width>1421</width>
+     <height>961</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {background-color:#1f1f2e;}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>50</y>
+     <width>471</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>MS Gothic</family>
+     <pointsize>16</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel {color:white;}</string>
+   </property>
+   <property name="text">
+    <string>Our recommended food for you :</string>
+   </property>
+  </widget>
+  <zorder>label_3</zorder>
+  <zorder>label</zorder>
+  <zorder>foodDai_delete_bt</zorder>
+  <zorder>foodDai_search_cb</zorder>
+  <zorder>label_2</zorder>
+  <zorder>foodDai_scrollArea</zorder>
+  <zorder>foodDai_save_bt</zorder>
+  <zorder>foodDai_add_bt</zorder>
+  <zorder>foodDai_back_bt</zorder>
+  <zorder>label_4</zorder>
  </widget>
  <resources/>
  <connections/>
